--- a/HW1_HTML_CSS/buildingPC.html
+++ b/HW1_HTML_CSS/buildingPC.html
@@ -5,25 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steps to Build a PC</title>
 
-    <style>
-        #mainTitle {
-            text-align: center;
-            font-family: "Times New Roman", serif;
-            font-size: max(20px, 40px);
-            margin-bottom: 3px;
-        }
-
-        .aImg {
-            font-family: "Times New Roman", serif;
-            font-size: max(5px, 20px);
-            margin: 0 auto;
-        }
-
-        nav {
-            text-align: center;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
