--- a/HW1_HTML_CSS/index.html
+++ b/HW1_HTML_CSS/index.html
@@ -5,31 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW 1: HTML and CSS</title>
 
-    <style>
-
-        #mainTitle {
-            text-align: center;
-            font-family: "Times New Roman", serif;
-            font-size: max(20px, 40px);;
-            margin-bottom: 3px;
-        }
-
-        .aImg {
-            font-family: "Times New Roman", serif;
-            font-size: max(5px, 20px);
-            margin: 0 auto;
-        }
-
-        nav {
-            text-align: center;
-        }
-
-        h2 {
-            text-align: center;
-            font-family: "Times New Roman", serif;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -48,8 +24,27 @@
     </nav>
 
     <h2> What is a PC? </h2>
-    <p style="text-align: center;">A PC (personal computer) is a multi-purpose, digital device designed for individual use in homes, schools, or offices. 
-        It features a processor, memory, and storage to perform tasks like internet browsing, document editing, and gaming.</p>
+
+    <div class="firstContent">
+    <img src="images/pc.jpg" alt="PC image">
+
+    <p id="indexP1">
+        When we refer to a PC, we usually mean a desktop computer. Laptops are also considered PCs, but for this build we will be focusing on desktop computers. 
+        A PC is a personal computer that is designed for individual use. It typically consists of a central processing unit (CPU), memory (RAM), storage (hard drive or solid-state drive), 
+        and various input/output devices such as a keyboard, mouse, and monitor, more on that later. 
+        PCs can be used for a wide range of tasks, including gaming, productivity, and multimedia consumption.
+    </p>
+    </div>
+
+    <h3> Why Build a PC?</h3>
+    
+    <div>
+    <p id="indexP2">
+        Anyone can build a PC, regardless of their technical expertise. They are not only for gamers or tech enthusiasts.
+        Building your own PC can be a great way to learn about computer hardware and how it works. 
+        It can also be a fun and rewarding project that allows you to customize your computer to your specific needs and preferences.
+        In the long run building your own PC can save you money, as you can often get better performance for a lower price than buying a pre-built computer.
+    </div>
 
     
 </body>
