--- a/HW1_HTML_CSS/index.html
+++ b/HW1_HTML_CSS/index.html
@@ -16,11 +16,11 @@
     </header>
 
     <nav>
-    <a class="aImg" href="index.html"> Home Page </a> <br>
+    <a class="aImg" href="index.html"> What is a PC? </a> <br>
     <a class="aImg" href="hardwareComponents.html"> Hardware </a> <br>
     <a class="aImg" href="buildingPC.html"> Steps to Buidling a PC </a> <br>
     <a class="aImg" href="tipsAndTricks.html"> Tips and Tricks </a> <br>
-    <hr>
+    <hr class="hr1">
     </nav>
 
     <h2> What is a PC? </h2>
@@ -45,7 +45,22 @@
         It can also be a fun and rewarding project that allows you to customize your computer to your specific needs and preferences.
         In the long run building your own PC can save you money, as you can often get better performance for a lower price than buying a pre-built computer.
     </div>
+    <hr class="hr1">
 
-    
+    <h4> References </h4>
+
+    <div>
+        <p id="indexP3">
+            https://www.techtarget.com/whatis/definition/PC-personal-computer <br>
+            https://computer.howstuffworks.com/pc.htm
+        </p>
+
+    </div>
+    <hr class="hr1">
+    <footer class="footer">
+        <p>California State University Monterey Bay</p>
+        <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
+    </footer>
+
 </body>
 </html>
