--- a/HW1_HTML_CSS/tipsAndTricks.html
+++ b/HW1_HTML_CSS/tipsAndTricks.html
@@ -13,12 +13,16 @@
     <h1 id="mainTitle"> Tips and Tricks </h1>
 
     <nav>
-    <a class="aImg" href="index.html"> Home Page </a> <br>
+    <a class="aImg" href="index.html"> What is a PC? </a> <br>
     <a class="aImg" href="hardwareComponents.html"> Hardware </a> <br>
     <a class="aImg" href="buildingPC.html"> Steps to Buidling a PC </a> <br>
     <a class="aImg" href="tipsAndTricks.html"> Tips and Tricks </a> <br>
-    <hr>
+    <hr class="hr1">
     </nav>
+
+    <footer class="footer">
+        <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
+    </footer>
 
 </body>
 </html>
