lots of updates

--- a/HW1_HTML_CSS/buildingPC.html
+++ b/HW1_HTML_CSS/buildingPC.html
@@ -20,7 +20,56 @@
     <hr class="hr1">
     </nav>
 
+    <h2 class="headerStyle"> Steps to Building your PC</h2>
+
+    <p class="paragraphStyle">
+        Installing your parts in a safe order and double checing connections is the most
+        important part of building a PC. Depending on the case you chose steps can very but are more or less the same process. 
+    </p>
+
+    <div class="firstContent">
+    <img src="images/pc-build-steps.jpg" alt="pc build">
+    </div>
+
+    <h3 class="headerStyle"> Assembly Steps </h3>
+    <ol class="listStyle">
+        <li><strong>READ ALL INFORMATION BEFORE ATTEMPTING ON YOUR OWN</strong></li>
+        <li><strong>Prepare your workspace:</strong> Work on a clean surface and avoid building on anything that can create static electricity</li>
+        <li><strong>Install CPU onto Motherboard:</strong> Carefully line up the CPU with the socket and lock into place. For more depth on how to do so watch this video. <a href="https://www.youtube.com/shorts/iQVQxeapji4"> How to Install CPU onto Motherboard</a></li>
+        <li><strong>Install Ram onto Motherboard:</strong> Open RAM slot clips press sticks down until the click into place. Be careful since these can break if too much pressure is applied. Video: <a href="https://www.youtube.com/shorts/FEdlQpj5xzo"> How to Install RAM onto Motherboard</a></li>
+        <li><strong>Install SSD into M.2 slot (if you have one):</strong> Slide SSD into the slot on motherboard and secure with case screw. </li>
+        <li><strong>Mount Motherboard into case:</strong> Place onto case standoffs and screw it in (DO NOT OVER TIGHTEN).</li>
+        <li><strong>Install the Power Suppply:</strong> Secure into case and route the cables where they need to go.</li>
+        <li><strong>Install storage drives(SATA SSD/HDD):</strong> Mount drive in the case drive bay or bracket, then connect the data cable to the motherboard and power to PSU cable.</li>
+        <li><strong>Install Graphics Card (GPU):</strong> Insert GPU into the PCIe slot on the motherboard adn secure it to your case.</li>
+        <li><strong>Connect all Power and Front Panel Cables:</strong> Plug in all components, 24-pin motherboard power, CPU power, GPU power, and the case front-panel connectors (power button, USB, audio). </li>
+        <li><strong>Check cables and Airflow:</strong> Make sure fans can spin freely and are not blocked.</li>
+        <li><strong>First Boot Test:</strong> Turn on PC and enter BIOS/UEFI to confirm the components are detected.</li>
+        <li><strong>Instal OS and Drivers: Install windows/linux, then install motherbaord and GPU drivers.</strong></li>
+    </ol>
+
+    <h4 class="headerStyle"> Common First-Boot Checks</h4>
+    <ul class="listStyle">
+        <li>Make sure monitor cable is connected to GPU and not the motherboard (a very common mistake).</li>
+        <li>Confirm RAM is fully clicked into place.</li>
+        <li>Check that power cabled and fully seated and that power to the PC is turned on.</li>
+    </ul>
+
+    <hr class="hr1">
+    <h6 class="headerStyle"> References </h6>
+    <div>
+        <p class="paragraphStyle">
+            <a href="https://www.intel.com/content/www/us/en/gaming/resources/what-is-a-cpu.html"> https://www.intel.com/content/www/us/en/gaming/resources/what-is-a-cpu.html </a> <br>
+            <a href="https://www.amd.com/en/support/tech-docs"> https://www.amd.com/en/support/tech-docs </a> <br>
+            <a href="https://www.samsung.com/semiconductor/minisite/ssd/support/ssd-guide/"> https://www.samsung.com/semiconductor/minisite/ssd/support/ssd-guide/ </a><br>
+            <a href="https://www.corsair.com/us/en/explorer/diy-builder/power-supply-units/"> https://www.corsair.com/us/en/explorer/diy-builder/power-supply-units/ </a><br>
+            <a href="https://www.nvidia.com/en-us/geforce/graphics-cards/what-is-a-gpu/"> https://www.nvidia.com/en-us/geforce/graphics-cards/what-is-a-gpu/ </a><br>
+        </p>
+    </div>
+
+    <hr class="hr1">
     <footer class="footer">
+        <p>California State University Monterey Bay</p>
         <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
     </footer>
     
