--- a/HW1_HTML_CSS/hardwareComponents.html
+++ b/HW1_HTML_CSS/hardwareComponents.html
@@ -21,7 +21,110 @@
     <hr class="hr1">
     </nav>
 
+    <h1 class="headerStyle">CPU (Central Proccesing Unit)</h1>
+    <div class="firstContent">
+    <img src="images/cpu.jpg" alt="CPU image">
+    <p class="paragraphStyle">
+        The CPU is the brain of the computer. It processes instructions from programs
+        and then tells other components what to do. These range from opening applications, running software,
+        to performing calculations. Choosing the right CPU can greatly impact the performance of you PC, especially larger task like 
+        gaming or video editing. When selecting a CPU, consider factors such as clock speed, number of cores, and
+        compatibility with your motherboard. With CPUs you have the choice between intel or AMD if running windows, both gret options but to take into considerationthe price.
+    </p>
+    </div>
+
+
+    <h2 class="headerStyle"> Motherboard</h2>
+    <div class="firstContent">
+    <img src="images/motherboard.jpg" alt="Motherboard image">
+    <p class="paragraphStyle">
+        The Motherboard is the main circuit board of the computer. It's job is connecting all the components together
+        and allows them to communicate with each other. All the components include the CPU (previusly mentioned), RAM, 
+        storage devices, GPU. When choosing a motherboard you need to make sure that it is compatible with the CPU you have chosen, 
+        as well as the other components you plan to use in the build.
+    </p>
+    </div>
+
+
+    <h3 class="headerStyle"> RAM (Memory)</h3>
+    <div class="image-row">
+    <img src="images/ram.jpg" alt="RAM image">
+    <img src="images/ramMotherboard.jpg" alt="RAM image">
+    </div>
+    <p class="paragraphStyle">
+        RAM or random access memory is a type of short-term memory that helps the computer run programs.
+        It allows multiple applicatiosns to run at the same time without slowing the system. More sticks of RAM generally 
+        means better performance, especially when running multiple applications or playing games. 
+        When choosing RAM, consider factors such as capacity (measured in GB), speed (measured in MHz), 
+        and compatibility with your motherboard.
+    </p>
+
+
+    <h4 class="headerStyle">Storage</h4>
+    <div class="image-row">
+        <img src="images/hdd.jpg" alt="hdd image">
+        <img src="images/ssd.jpg" alt="sdd image">
+    </div>
+    <p class="paragraphStyle">
+        With Storage, there are two main types to choose from, HDD (Hard Disk Drive on the left) and SSD (Solid State Drive on the right).
+        HDDs are the traditional type of storage and are generally less expensive than SSDs but they are also slower. 
+        SSDs are faster and more reliable than HDDs, but they are also more expensive. 
+        HDDs are installed in the drive bays of the case you choose, while SSDs can be installed in the drive bays or on the motherboard itself 
+        using an M.2 slot. When choosing storage, consider factors such as capacity (measured in GB or TB), 
+        speed (measured in RPM for HDDs and read/write speeds for SSDs), and compatibility with your motherboard.
+    </p>
+
+    <h5 class="headerStyle">GPU (Graphics Card)</h5>
+    <div class="firstContent">
+        <img src="images/gpu.jpg" alt="gpu image">
+    </div>
+    <p class="paragraphStyle">
+        The GPU or the Graphics Processing Unit is repsonsible for rendering images, videos, and
+        graphics on the screen. It is espeically important for gaming, video editing and graphics design. The GPU can 
+        possibly the most expensive part of a build so when choosing a GPU, consider factors such as performance, memory (measured in GB), 
+        and compatibility with your motherboard and power supply. 
+    </p>
+
+    <h6 class="headerStyle">Power Supply</h6>
+    <div class="firstContent">
+        <img src="images/power.jpg" alt="powerSupply image">
+    </div>
+    <p class="paragraphStyle">
+        The Power Supply Unit (PSU) provides electricity to all the components in the computer. 
+        It conver power from the wall outlet into the correct voltage and current needed by the components. 
+        When choosing a power supply, consider factors such as wattage (measured in watts), efficiency (measured in 80 Plus ratings),
+        and compatibility with your components.
+    </p>
+ 
+    <h6 class="headerStyle"> Cases </h6>
+    <div class="image-row">
+        <img src="images/case.jpg" alt="case1 image">
+        <img src="images/case2.jpg" alt="case2 image">
+    </div>
+    <p class="paragraphStyle">
+        The case is the outer shell of the computer where all the components are put together.
+        It protects the hardware and also helps with airflow to keep the components nice and cool. Cases 
+        can be ordinary shells or very unique. With each design there are pros and cons. When choosing a case be sure to 
+        choose one that you'll like and that is within your budget. 
+    </p>
+    <hr class="hr1">
+
+    <h6 class="headerStyle"> References </h6>
+    <div>
+        <p class="paragraphStyle">
+            <a href="//www.intel.com/content/www/us/en/gaming/resources/what-is-a-cpu.html"> //www.intel.com/content/www/us/en/gaming/resources/what-is-a-cpu.html </a> <br>
+            <a href="https://www.amd.com/en/support/tech-docs"> https://www.amd.com/en/support/tech-docs </a><br>
+            <a href="https://www.samsung.com/semiconductor/minisite/ssd/support/ssd-guide/"> https://www.samsung.com/semiconductor/minisite/ssd/support/ssd-guide/ </a>" <br>
+            <a href="https://www.corsair.com/us/en/explorer/diy-builder/power-supply-units/"> https://www.corsair.com/us/en/explorer/diy-builder/power-supply-units/</a><br>
+            <a href="https://www.nvidia.com/en-us/geforce/graphics-cards/what-is-a-gpu/"> https://www.nvidia.com/en-us/geforce/graphics-cards/what-is-a-gpu/ </a> <br>
+
+        </p>
+    </div>
+    <hr class="hr1">
+
+
     <footer class="footer">
+        <p>California State University Monterey Bay</p>
         <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
     </footer>
 
