--- a/HW1_HTML_CSS/index.html
+++ b/HW1_HTML_CSS/index.html
@@ -23,12 +23,12 @@
     <hr class="hr1">
     </nav>
 
-    <h2> What is a PC? </h2>
+    <h2 class="headerStyle" > What is a PC? </h2>
 
     <div class="firstContent">
     <img src="images/pc.jpg" alt="PC image">
 
-    <p id="indexP1">
+    <p class="paragraphStyle">
         When we refer to a PC, we usually mean a desktop computer. Laptops are also considered PCs, but for this build we will be focusing on desktop computers. 
         A PC is a personal computer that is designed for individual use. It typically consists of a central processing unit (CPU), memory (RAM), storage (hard drive or solid-state drive), 
         and various input/output devices such as a keyboard, mouse, and monitor, more on that later. 
@@ -36,27 +36,41 @@
     </p>
     </div>
 
-    <h3> Why Build a PC?</h3>
+    <h3 class="headerStyle"> Why Build a PC?</h3>
     
     <div>
-    <p id="indexP2">
+    <p class="paragraphStyle">
         Anyone can build a PC, regardless of their technical expertise. They are not only for gamers or tech enthusiasts.
         Building your own PC can be a great way to learn about computer hardware and how it works. 
         It can also be a fun and rewarding project that allows you to customize your computer to your specific needs and preferences.
         In the long run building your own PC can save you money, as you can often get better performance for a lower price than buying a pre-built computer.
+    </p>
     </div>
-    <hr class="hr1">
 
-    <h4> References </h4>
+    <h4 class="headerStyle">How to get Started</h4>
 
     <div>
-        <p id="indexP3">
-            https://www.techtarget.com/whatis/definition/PC-personal-computer <br>
-            https://computer.howstuffworks.com/pc.htm
-        </p>
-
+    <p class="paragraphStyle">What will the PC be used mainly for? <br>
+        Gaming <br>
+        Productivity <br>
+        Multimedia Consumption <br>
+        <br>
+    <strong>Budget:</strong> How much are you willing to spend? 
+    <br>
+    <strong>Hardware:</strong> Learn about the different hardware components and why they are crucial to performance.
+    </p>
     </div>
     <hr class="hr1">
+
+    <h4 class="headerStyle"> References </h4>
+
+    <div>
+        <p class="paragraphStyle">
+            <a href="//www.techtarget.com/whatis/definition/PC-personal-computer"> //www.techtarget.com/whatis/definition/PC-personal-computer"</a> <br>
+            <a href="//computer.howstuffworks.com/pc.htm"> "//computer.howstuffworks.com/pc.htm"</a>
+        </p>
+    <hr class="hr1">
+
     <footer class="footer">
         <p>California State University Monterey Bay</p>
         <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
