--- a/HW1_HTML_CSS/tipsAndTricks.html
+++ b/HW1_HTML_CSS/tipsAndTricks.html
@@ -20,7 +20,12 @@
     <hr class="hr1">
     </nav>
 
+    <div class="firstContent">
+    <img src="images/tipsandtricks.png" alt="tips and tricks">
+    </div>
+
     <footer class="footer">
+        <p>California State University Monterey Bay</p>
         <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
     </footer>
 
