final update hopefully

--- a/HW1_HTML_CSS/tipsAndTricks.html
+++ b/HW1_HTML_CSS/tipsAndTricks.html
@@ -24,6 +24,35 @@
     <img src="images/tipsandtricks.png" alt="tips and tricks">
     </div>
 
+    <h2 class="headerStyle"> Common Mistakes </h2>
+    <ol class="listStyle">
+        <li><strong>Forgetting to Check Compatability:</strong> Not all parts/components work together. The CPU must match the motherbaord socket and the RAM tyoe must also be supported by the motherboard. </li>
+        <li><strong>RAM Not Fully Seated:</strong> RAM sticks need to bu fully seated and clicked into place otherwise the PC may not boot.</li>
+        <li><strong>Forgetting the CPU Power Cable:</strong> You may have plugged in the motherboard to get power but the CUP also needs its own power that is near the top of the board.</li>
+        <li><strong>Plugging Monitor Into the Wrong Port:</strong> When you use a dedicated graphics card, the monitor must be connected to the CPU and not the motherboard itself.</li>
+        <li><strong>Installing the Motherboard Without Standoffs:</strong>  Standoffs help prevent the motherboard from touching your metal case, if the motherboard is not on a standoff then it can short circuit, ruining the motherboard.</li>
+        <li><strong>Poor Airflow:</strong> Fans installed poorly or in the wrong direction can trap heat inside, which can cause overheating.</li>
+    </ol>
+
+    <h3 class="headerStyle">Quick Tips</h3>
+    <ul class="listStyle">
+        <li>Read the motherboard manual before connecting cables.</li>
+        <li>Install the CPU, RAM, and storage on the motherboard before placing it in the case.</li>
+        <li>Keep screws organized to avoid losing them.</li>
+        <li>Do not overtighten screws; snug is enough.</li>
+        <li>Use cable management to improve airflow.</li>
+        <li>Install system drivers after setting up the operating system.</li>
+    </ul>
+    <hr class="hr1">
+
+    <h4 class="headerStyle"> References </h4>
+    <p class="paragraphStyle">
+        <a href="https://www.intel.com/content/www/us/en/gaming/resources/how-to-build-a-gaming-pc.html" > Intel How to Build a PC</a> <br>
+        <a href="https://www.amd.com/en/support/kb/faq/pc-building" > AMD PC Building Help & Support</a><br>
+        <a href="https://www.corsair.com/us/en/explorer/diy-builder/" > Corsair PC Building Tips for Beginners</a>
+    </p>
+
+    <hr class="hr1">
     <footer class="footer">
         <p>California State University Monterey Bay</p>
         <p>Built by Carlos Cupa • HW 1 HTML & CSS</p>
