--- a/HW1_HTML_CSS/hardwareComponents.html
+++ b/HW1_HTML_CSS/hardwareComponents.html
@@ -16,7 +16,7 @@
     <nav>
     <a class="aImg" href="index.html"> What is a PC? </a> <br>
     <a class="aImg" href="hardwareComponents.html"> Hardware </a> <br>
-    <a class="aImg" href="buildingPC.html"> Steps to Buidling a PC </a> <br>
+    <a class="aImg" href="buildingPC.html"> Steps to Building a PC </a> <br>
     <a class="aImg" href="tipsAndTricks.html"> Tips and Tricks </a> <br>
     <hr class="hr1">
     </nav>
