--- a/HW1_HTML_CSS/index.html
+++ b/HW1_HTML_CSS/index.html
@@ -69,7 +69,9 @@
             <a href="//www.techtarget.com/whatis/definition/PC-personal-computer"> //www.techtarget.com/whatis/definition/PC-personal-computer"</a> <br>
             <a href="//computer.howstuffworks.com/pc.htm"> "//computer.howstuffworks.com/pc.htm"</a>
         </p>
+    </div>
     <hr class="hr1">
+
 
     <footer class="footer">
         <p>California State University Monterey Bay</p>
