--- a/lab3/index.html
+++ b/lab3/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
 
-    <h1>Question 1</h1>
+    <div id="attempts"></div>
+    <div id="totalScore"></div>
+    <div id="message"></div>
+
+    <h1>Pokemon Quiz</h1>
+
+    <h2>Question 1</h2>
     What is Charizards typing? <br>
     <div id="q1ChoicesDiv"></div>
     <div id="q1Feedback" class="feedback"></div>
@@ -41,8 +47,15 @@
     <input type="number" id="q4Number">
     <div id="q4Feedback" class="feedback"></div>
 
+    <h2>Question 5</h2>
+    Select ALL that are Electric Type Pokemon:
+    <br>
+    <div id="q5ChoicesDiv"></div>
+    <div id="q5Feedback" class="feedback"></div>
+
     <br><br>
     <button>Submit Quiz</button>
 
 </body>
+
 </html>
