--- a/lab4/index.html
+++ b/lab4/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 4 Sign Up Form</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,11 +14,11 @@
 
     <fieldset>
         <legend>Sign Up</legend>
-        First Name: <input type="text"><br>
+        First Name: <input type="text" id="name"> <br>
         Last Name: <input type="text"><br>
         Email: <input type="text"><br>
         Phone Number:<input type="text"><br><br>
-        Zip Code: <input type="text" id="zipCode"><br>
+        Zip Code: <input type="text" id="zipCode"> <span id="zipMsg"></span><br>
         City: <span id="city"> </span>
         <br>
         Latitude: <span id="latitude"></span>
@@ -26,11 +27,13 @@
         <br><br>
         State: <select id="state"></select>
         <br>
-        Select a County: <select></select><br>
-        Desired Username: <input type="text"> <span id="username"></span><br>
-        Password: <input type="password" id="password"> <span id="password2"></span> <br>
-        Type Password Again: <input type="password"> <br>
-        <input type="submit" value="Sign up!">
+        Select a County: <select id="county"></select><br>
+        Desired Username: <input type="text" id="username"> 
+        <span id="usernameMsg"></span><br>
+        Password: <input type="password" id="password"> 
+        <span id="password2"></span> <br>
+        Type Password Again: <input type="password" id="passwordAgain"> <br>
+        <input type="submit" value="Sign up!" id="submitBtn">
     </fieldset>
 
     <script src="js/script.js"></script>
